--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <body class="mat-typography">
   <h1>PCINFO</h1>
   <h1>PCINFO-test</h1>
+  <h1>PCINFO-test2</h1>
 
   <app-root></app-root>
 </body>
